# blackjack

./: .gitignore  .gitmodules  .licensure.yml  .luaurc  .stylua.toml  Cargo.toml  LICENSE  README.md  all_nodes_test.bjk  all_nodes_test.blj  build_godot_plugin.sh  build_ldoc.sh  ldoc.css  reinstall_godot_plugin.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/matcap/: CREDITS.txt
blackjack_commons/: Cargo.toml
blackjack_commons/src/: lib.rs  math.rs  utils.rs
blackjack_engine/: Cargo.toml
blackjack_engine/src/: engine_tests.rs  gizmos.rs  graph.rs  graph_compiler.rs  graph_data_model.rs  graph_interpreter.rs  lib.rs  lua_engine.rs  mesh.rs  prelude.rs  sync.rs
blackjack_engine/src/graph/: graph_compiler.rs  node_graph.rs  serde_compat.rs  serialization.rs
blackjack_engine/src/graph_data_model/: test_compiler.rs
blackjack_engine/src/lua_engine/: blackjack_utils.lua  lua_stdlib.rs  node_library.lua  node_params.lua
blackjack_engine/src/lua_engine/lua_stdlib/: lua_constructors_library.rs  lua_core_library.rs  lua_documentation.rs  lua_export_library.rs  lua_mesh_library.rs  lua_node_libraries.rs  lua_primitives_library.rs  lua_require_io.rs  runtime_types.rs
blackjack_engine/src/mesh/: halfedge.rs  heightmap.rs
blackjack_engine/src/mesh/halfedge/: channels.rs  compact_mesh.rs  edit_ops.rs  gpu_buffer_generation.rs  halfedge_lua_api.rs  id_types.rs  mappings.rs  mesh_index_impls.rs  primitives.rs  selection.rs  traversals.rs  wavefront_obj.rs
blackjack_engine/src/mesh/halfedge/edit_ops/: deprecated.rs
blackjack_godot/: Cargo.toml
blackjack_godot/src/: godot_lua_io.rs  helpers.rs  inspector_plugin.rs  lib.rs
blackjack_lua/lib/: gizmo_helpers.lua  priority_queue.lua  table_helpers.lua  vector_math.lua
blackjack_lua/run/: core_nodes.lua  euler_angles.lua  helix.lua  playground.lua  procedural_road.lua  svg_path.lua  test_code.lua  test_load_file.lua
blackjack_macros/: Cargo.toml
blackjack_macros/src/: blackjack_lua_module.rs  lib.rs  utils.rs
blackjack_macros/src/blackjack_lua_module/: fn_attr.rs
blackjack_ui/: Cargo.toml
blackjack_ui/src/: app_window.rs  application.rs  cli_args.rs  color_hex_utils.rs  custom_widgets.rs  egui_ext.rs  graph.rs  main.rs  prelude.rs  render_context.rs  rendergraph.rs
blackjack_ui/src/app_window/: gui_overlay.rs  input.rs
blackjack_ui/src/application/: app_viewport.rs  application_context.rs  code_viewer.rs  gizmo_ui.rs  graph_editor.rs  inspector.rs  root_graph.rs  root_ui.rs  serialization.rs  viewport_3d.rs  viewport_split.rs
blackjack_ui/src/application/viewport_3d/: lerp.rs
blackjack_ui/src/custom_widgets/: smart_dragvalue.rs
blackjack_ui/src/graph/: graph_compiler.rs  graph_interop.rs  node_graph.rs
blackjack_ui/src/rendergraph/: common.rs  edge_wireframe_draw.wgsl  face_id_draw.wgsl  face_overlay_draw.wgsl  face_routine.rs  grid_routine.rs  grid_shader.wgsl  id_picking_routine.rs  point_cloud_draw.wgsl  point_cloud_routine.rs  rend3_common.wgsl  rend3_object.wgsl  rend3_uniforms.wgsl  rend3_vertex.wgsl  shader_manager.rs  utils.wgsl  viewport_3d_routine.rs  wireframe_routine.rs
blackjack_ui_iced/: Cargo.toml
blackjack_ui_iced/src/: extensions.rs  graph_editor_pane.rs  helper_widgets.rs  main.rs  prelude.rs  root_panes.rs  theme.rs
blackjack_ui_iced/src/graph_editor_pane/: node_editor.rs  node_widget.rs  port_widget.rs
blackjack_ui_iced/src/helper_widgets/: overlap_container.rs
blackjack_ui_iced/src/theme/: color_hex_utils.rs
blackjack_ui_next/: Cargo.toml
blackjack_ui_next/resources/fonts/: OFL.txt
blackjack_ui_next/resources/icons/: CREDITS.md  WORKFLOW.md
blackjack_ui_next/src/: blackjack_theme.rs  graph_editor.rs  icon_management.rs  main.rs  node_editor_widget.rs  node_widget.rs  renderer.rs  serialization.rs  viewport_3d.rs  widgets.rs
blackjack_ui_next/src/graph_editor/: node_finder.rs
blackjack_ui_next/src/renderer/: face_routine.rs  gizmo_routine.rs  grid_routine.rs  id_picking_routine.rs  point_cloud_routine.rs  render_state.rs  routine_renderer.rs  shader_manager.rs  texture_manager.rs  wgpu_utils.rs  wireframe_routine.rs
blackjack_ui_next/src/renderer/wgsl/: edge_wireframe_draw.wgsl  face_draw.wgsl  face_id_draw.wgsl  face_overlay_draw.wgsl  gizmo_color.wgsl  gizmo_common.wgsl  gizmo_id.wgsl  grid_shader.wgsl  point_cloud_draw.wgsl  rend3_object.wgsl  uniforms.wgsl
blackjack_ui_next/src/viewport_3d/: lerp.rs  orbit_camera.rs  viewport_gizmos.rs  viewport_math.rs
blackjack_ui_next/src/widgets/: node_editor_widget.rs  node_finder_widget.rs  node_widget.rs
doc/: why_lua.md
doc/images/: drawings.excalidraw  edge_extrude.excalidraw
examples/: Box.bjk  EXAMPLES_LICENSE  box.bjk  extrude-quad-along-helix.bjk  gizmo_translate_arrow.bjk  gizmo_translate_plane_handle.bjk  machine_frame.bjk  static-sword.bjk  stylised_sword.bjk  svgpath-sword.bjk  tp_cutter.bjk
node_libraries/: core_nodes.lua  test.lua  test_channels.lua  test_channels2.lua  test_code.lua
src/: app_window.rs  application.rs  asset_manager.rs  color_hex_utils.rs  engine.rs  graph.rs  lua_engine.rs  main.rs  math.rs  mesh.rs  prelude.rs  render_context.rs  rendergraph.rs  shader.wgsl  utils.rs
src/app_window/: default_scene.rs  gui_overlay.rs  input.rs
src/application/: app_viewport.rs  application_context.rs  code_viewer.rs  graph_editor.rs  inspector.rs  root_graph.rs  root_ui.rs  serialization.rs  viewport_3d.rs  viewport_split.rs
src/engine/: blackjack_init.lua  core_nodes.lua  execution.rs  fennel-1.0.0.lua  lua_stdlib.rs  node_library.lua  test.lua  vec3.lua  vec4.lua  vectest.lua
src/graph/: graph_compiler.rs  graph_compiler2.rs  graph_editor_egui.rs  graph_types.rs  node_graph.rs  node_graph_custom.rs  poly_asm.rs
src/lua_engine/: lua_stdlib.rs  vec2.lua  vec3.lua  vec4.lua
src/mesh/: debug_viz.rs  halfedge.rs  sdf.rs
src/rendergraph/: common.rs  edge_routine.rs  edge_viewport.wgsl  edge_wireframe_draw.wgsl  egui_routine_custom.rs  face_draw.wgsl  face_overlay_draw.wgsl  face_routine.rs  grid_routine.rs  grid_shader.wgsl  point_cloud_draw.wgsl  (+12 more)
(+58 files in other folders)
