[workspace]
members = [
    "blackjack_commons",
    "blackjack_engine",
    "blackjack_ui",
    "blackjack_godot",
]

resolver = "2"

# Image loading is too slow in debug mode. This compiles all dependencies with optimizations.
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
# NOTE: These patches are only used for development, and should be left
# commented out in any commits to the 'main' branch
# egui_wgpu_backend = { path = "../egui_wgpu_backend" }
# egui_winit_platform = { path = "../egui_winit_platform" }
# egui_node_graph = { path = "../egui_node_graph/egui_node_graph", features = ["persistence"] }
# rend3 = { path = "../rend3/rend3" }
# rend3-routine = { path = "../rend3/rend3-routine" }
# wavefront_rs = { path = "../wavefront_rs" }
