[workspace]
members = [
    "blackjack_commons",
    "blackjack_engine",
    "blackjack_ui",
    "blackjack_godot",
]

resolver = "2"

# Image loading is too slow in debug mode. This compiles all dependencies with optimizations.
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
# These patches are necessary until either of these is fixed:
# - https://github.com/BVE-Reborn/rend3/pull/400
# - https://github.com/emilk/egui/issues/1805
egui = { git = "https://github.com/setzer22/egui", branch = "blackjack" }
egui-wgpu = { git = "https://github.com/setzer22/egui", branch = "blackjack" }
egui-winit = { git = "https://github.com/setzer22/egui", branch = "blackjack" }

# NOTE: These patches are only used for development, and should be left
# commented out in any commits to the 'main' branch
# egui_wgpu_backend = { path = "../egui_wgpu_backend" }
# egui_winit_platform = { path = "../egui_winit_platform" }
# egui_node_graph = { path = "../egui_node_graph/egui_node_graph", features = ["persistence"] }
# egui = { path = "../egui/egui" }
# egui-winit = { path = "../egui/egui-winit" }
# egui-wgpu = { path = "../egui/egui-wgpu" }
# rend3 = { path = "../rend3/rend3" }
# rend3-routine = { path = "../rend3/rend3-routine" }
# wavefront_rs = { path = "../wavefront_rs" }