[package]
name = "blackjack_engine"
description = "A procedural, node-based modelling tool, made in Rust"
homepage = "https://github.com/setzer22/blackjack"
repository = "https://github.com/setzer22/blackjack"
license = "MIT"
version = "0.1.0"
keywords = ["gamedev", "3d", "modelling", "procedural"]
authors = ["setzer22"]
edition = "2021"

[features]
tracy = ["profiling/profile-with-tracy"]

[dependencies]
# Workspace dependencies
blackjack_macros = { path = "../blackjack_macros/" }
blackjack_commons = { path = "../blackjack_commons" }

# Crates.io crates
glam = { version = "0.21.2", features = ["serde", "bytemuck"] }
smallvec = { version = "1.7.0", features = ["serde"] }
itertools = "0.10"
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
float-ord = "0.3.2"
rayon = "1.5.1"
nonmax = "0.5"
slotmap = { version = "1.0", features = ["serde"] }
num-traits = "0.2.14"
atomic_float = "0.1"
profiling = { version = "1.0" }
nom = "7.1"
mlua = { version = "0.8.1", features = ["luau"] }
notify = "4.0"
walkdir = "2"
bimap = "0.6.2"
dyn-clone = "1.0"
noise = "0.7"
rstar = "0.9.3"
wavefront_rs = "1.0.4"
derive_more = "0.99"
inventory = "0.3.0"
ndarray = "0.15.6"
