[package]
name = "blackjack_godot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.8.0-beta.3", features = ["luau"] }
glam = { version = "0.20", features = ["serde", "bytemuck"] }
blackjack_engine = { path = "../blackjack_engine" }
gdnative = "0.10.0"
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
lazy_static = "1.4"
once_cell = "1.12"
parking_lot = "0.12"