[package]
name = "blackjack_godot"
description = "A procedural, node-based modelling tool, made in Rust"
homepage = "https://github.com/setzer22/blackjack"
repository = "https://github.com/setzer22/blackjack"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
license = "MPL-2.0"
keywords = ["gamedev", "3d", "modelling", "procedural"]
authors = ["setzer22"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
library = []

[dependencies]
mlua = { version = "0.8.1", features = ["luau"] }
glam = { version = "0.21.2", features = ["serde", "bytemuck"] }
blackjack_engine = { path = "../blackjack_engine" }
gdnative = "0.10.0"
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
lazy_static = "1.4"
once_cell = "1.12"
parking_lot = "0.12"
slotmap = { version = "1.0", features = ["serde"] }
