[package]
name = "blackjack_macros"
description = "A procedural, node-based modelling tool, made in Rust"
homepage = "https://github.com/setzer22/blackjack"
repository = "https://github.com/setzer22/blackjack"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
license = "MPL-2.0"
keywords = ["gamedev", "3d", "modelling", "procedural"]
authors = ["setzer22"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"