[package]
name = "blackjack_ui"
description = "A procedural, node-based modelling tool, made in Rust"
homepage = "https://github.com/setzer22/blackjack"
repository = "https://github.com/setzer22/blackjack"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
keywords = ["gamedev", "3d", "modelling", "procedural"]
authors = ["setzer22"]

[features]
tracy = ["profiling/profile-with-tracy"]

[dependencies]
# Workspace dependencies
blackjack_commons = { path = "../blackjack_commons" }
blackjack_engine = { path = "../blackjack_engine" }

# Git dependencies
egui_node_graph = { git = "https://github.com/setzer22/egui_node_graph", rev = "75308d0e72dd604339cd864173ca31f1bc7a3fc7", features = [
    "persistence",
] }
rend3 = { git = "https://github.com/Cakefish/rend3.git", rev = "dbdfc32264a1fcab3a15c698c4fc474344f10aab" }
rend3-routine = { git = "https://github.com/Cakefish/rend3.git", rev = "dbdfc32264a1fcab3a15c698c4fc474344f10aab" }
glsl-include = { git = "https://github.com/setzer22/glsl-include", rev = "d9b1ade" }

# Crates.io crates
egui-winit = { version = "0.19" }
egui-wgpu = { version = "0.19" }
egui = { version = "0.19", features = ["persistence"] }
glam = { version = "0.21.2", features = ["serde", "bytemuck"] }
env_logger = { version = "0.9", default-features = false, features = [
    "termcolor",
    "atty",
] }
winit = { version = "0.27.2" }
wgpu = "0.13"
pollster = "0.2"
smallvec = { version = "1.7.0", features = ["serde"] }
itertools = "0.10"
anyhow = { version = "1.0", features = ["backtrace"] }
bytemuck = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
rfd = { version = "0.9.1", default-features = false, features = ["xdg-portal"] }
float-ord = "0.3.2"
spin_sleep = "1.0.0"
rayon = "1.5.1"
nonmax = "0.5"
slotmap = { version = "1.0", features = ["serde"] }
num-traits = "0.2.14"
atomic_float = "0.1"
profiling = { version = "1.0" }
image = { version = "0.24", default-features = false, features = ["png"] }
nom = "7.1"
mlua = { version = "0.8.1", features = ["luau"] }
notify = "4.0"
walkdir = "2"
syntect = "4.6"
bimap = "0.6.2"
dyn-clone = "1.0"
noise = "0.7"
rstar = "0.9.3"
wavefront_rs = "1.0.4"
derive_more = "0.99"
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.15"
