[package]
name = "blackjack_ui_iced"
description = "A procedural, node-based modelling tool, made in Rust"
homepage = "https://github.com/setzer22/blackjack"
repository = "https://github.com/setzer22/blackjack"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
license = "MPL-2.0"
keywords = ["gamedev", "3d", "modelling", "procedural"]
authors = ["setzer22"]

[dependencies]
# Workspace dependencies
blackjack_commons = { path = "../blackjack_commons" }
blackjack_engine = { path = "../blackjack_engine" }

# Git dependencies
iced = { git = "https://github.com/tarkah/iced.git", branch = "feat/primitive-scale", features=["canvas"] }
iced_native = { git = "https://github.com/tarkah/iced.git", branch = "feat/primitive-scale" }
iced_graphics = { git = "https://github.com/tarkah/iced.git", branch = "feat/primitive-scale" }
iced_lazy = { git = "https://github.com/tarkah/iced.git", branch = "feat/primitive-scale" }
iced_style = { git = "https://github.com/tarkah/iced.git", branch = "feat/primitive-scale" }
iced_wgpu = { git = "https://github.com/tarkah/iced.git", branch = "feat/primitive-scale" }

# Crates.io dependencies
glam = "0.21.3"
